--- a/estilos/style_about.css
+++ b/estilos/style_about.css
@@ -22,20 +22,14 @@
 .container-text {
     display: flex;
     flex-direction: column;
-    
-    /* background-color: #5c96cc3a;
-    border: 10px solid #5c96cc38;
-    border-radius: 20px; */
-    /* max-width: 900px; */
     width: 100%;
     padding: 30px;
     gap: 30px;
     overflow: hidden;
+    text-align: justify;
 
 }
-.container-text {
-    text-align: justify;
-}
+
 .profile-info{
     display: flex;
     justify-content: center;
@@ -47,7 +41,6 @@
     max-width: 500px;
     max-height: 500px;
     border-radius: 20px;
-    /* margin-bottom: 20px; */
     object-fit: cover;
     
 }
@@ -57,9 +50,13 @@
     padding: 0 50px;
     gap: 20px;
 }
-/* @media (max-width: 480px) {
+@media (max-width: 480px) {
     #about{
         padding: 15px 5px;
+    }
+    .profile-info{
+        display: flex;
+        flex-direction: column;
     }
     .child-title{
         font-size: 2rem;
@@ -69,10 +66,17 @@
         font-size: 1.3rem;
         height: 100%;
     }
-    .profile-info img {
-        height: 50px;
-        width: 50px;
+    .profile-text {
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
     }
+    .profile-info img {
+        max-width: 100px;
+        max-height: 100px;
+        border-radius: 10px;
+    }
+    
 }
 
 @media (min-width: 480px) and (max-width: 768px) {
@@ -83,12 +87,21 @@
     .container-about {
         font-size: 1.5rem;
         height: 100%;
-        margin-top: 2vh;
+    } 
+    .profile-info{
+        display: flex;
+        flex-direction: column;
+    }
+    .profile-text {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
     }
     .profile-info img {
-        height: 70px;
-        width: 70px;
+        max-width: 150px;
+        max-height: 150px;
     }
+
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
@@ -99,12 +112,18 @@
         font-size: 1.7rem;
         height: 100%;
     }
+    .profile-text {
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
+    }
     .profile-info img {
-        height: 100px;
-        width: 100px;
+       
+        min-width: 200px;
+        min-height: 200px;
     }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
     #about{
         padding: 20px;
     }
@@ -113,10 +132,12 @@
         height: 100%;
     }
     .profile-info img {
-        height: 100px;
-        width: 100px;
+       max-width: 500px;
+       max-height: 500px;
     }
-    .container-text {
-        padding: 70px;
+    .profile-text {
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
     }
-} */
+}
