--- a/estilos/style_about.css
+++ b/estilos/style_about.css
@@ -5,6 +5,8 @@
     border-top: 2px solid rgba(0, 0, 0, 0.075);
     border-bottom: 2px solid rgba(0, 0, 0, 0.075);
     /* background-color: #c1d0e0; */
+    background-color: rgb(189, 212, 221);
+    box-shadow: 20px 4px 10px rgba(0, 0, 0, 0.3);
 }
 .container-about {
     display: flex;
@@ -17,7 +19,9 @@
 }
 .child-title {
     text-align: center;
-    font-family:Arial, Helvetica, sans-serif;   
+    /* font-family:Arial, Helvetica, sans-serif;    */
+    text-shadow: 2px 2px 5px rgba(77, 102, 214, 0.4);
+    font-style: italic;
 }
 .container-text {
     display: flex;
@@ -53,6 +57,8 @@
 @media (max-width: 480px) {
     #about{
         padding: 15px 5px;
+        /* margin-top: 10vh; */
+        position: relative;
     }
     .profile-info{
         display: flex;
