--- a/estilos/style_contact.css
+++ b/estilos/style_contact.css
@@ -1,10 +1,12 @@
 #contact {
-    background-color: #f8f9fa;
-    padding: 40px 20px;
+     padding: 40px 20px;
     text-align: center;
     font-family: quicksand;
     height: auto;
-    margin-top: 15vh;
+    /* margin-top: 15vh; */
+    background-color: rgba(200, 225, 236, 0.438);
+    
+    
 }
 
 .contact_container {
@@ -49,6 +51,7 @@
     border-radius: 5px;
     text-decoration: none;
     transition: background-color 0.3s;
+    font-weight: bolder;
 }
 
 .contact_links a:hover {
@@ -73,7 +76,7 @@
 
 @media (max-width: 480px) {
     #contact{
-        margin-top: 4vh;
+        /* margin-top: 4vh; */
     }
     .contact_container {  
         gap: 10px;
@@ -110,7 +113,7 @@
 
 @media (min-width: 481px) and (max-width: 768px) {
     #contact{
-        margin-top: 0vh;
+        /* margin-top: 0vh; */
     }
     .contact_container {  
         gap: 16px;
@@ -133,7 +136,7 @@
     
     .contact_links a {
         display: inline-block;
-        max-width: 500px;
+        max-width: 300px;
         width: 100%; 
         font-size: 1.3rem;
         text-align: center;
@@ -149,7 +152,7 @@
 
 @media (min-width: 769px) and (max-width: 1024px) {
     #contact{
-        margin-top: 5vh;
+        /* margin-top: 5vh; */
     }
     .contact_container {  
         gap: 12px;
@@ -172,7 +175,7 @@
     
     .contact_links a {
         display: inline-block;
-        max-width: 500px;
+        max-width: 300px;
         width: 100%; 
         font-size: 1.3rem;
         text-align: center;
