--- a/estilos/style_portafolio.css
+++ b/estilos/style_portafolio.css
@@ -5,19 +5,17 @@
     justify-content: center;
     align-items: center;
     font-family: "Quicksand", serif;
-    /* margin: 50px 0; */
     padding: 20px;
-    /* background-color: #c1d0e0; */
     min-height: 70vh;
-    background-color: rgb(189, 212, 221);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 #portafolio h1 {
     font-size: 3rem;
     text-align: center;
-    color: rgb(52, 52, 52);
+    color: black;
     margin-bottom: 30px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /* Contenedor de proyectos */
@@ -39,8 +37,8 @@
     box-shadow: 0 4px 6px rgba(82, 137, 221, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     max-width: 300px;
-    /* background-color: #dfe4eb; */
-    background-color: rgba(255, 255, 255, 0.692);
+    background-color: #dfe4eb;
+    /* background-color: rgba(255, 255, 255, 0.692); */
 }
 
 /* Efecto hover */
@@ -122,16 +120,9 @@
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
-    #portafolio  {
-        
-    }
     #portafolio  h1 {
         font-size: 2.2rem;
         margin-top: 30px;
-        /* margin-bottom: 20px; */
-    }
-    .items-port {
-        /* max-width: 500px; */
     }
     .container-port {
         gap: 15px;
@@ -149,16 +140,9 @@
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-    #portafolio  {
-        /* margin: 22px 0; */
-    }
+ 
     #portafolio  h1 {
-        font-size: 2.5rem;
-        /* margin-top: 30px; */
-        /* margin-bottom: 20px; */
-    }
-    .items-port {
-        /* max-width: 500px; */
+        font-size: 2.7rem;
     }
     .container-port {
         gap: 22px;
@@ -176,4 +160,5 @@
 }
 
 @media (min-width: 1025px) {
+ 
 }
