--- a/estilos/style_header.css
+++ b/estilos/style_header.css
@@ -1,3 +1,7 @@
+header a.active {
+    /* color: #007bff;  */
+    border-bottom: 2px solid  #5c96cc;
+  }
 .container {
     display: flex;
     height: 10vh;
