--- a/estilos/style_portafolio.css
+++ b/estilos/style_portafolio.css
@@ -15,9 +15,19 @@
     text-align: center;
     color: black;
     margin-bottom: 30px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Times New Roman', Times, serif;
+    font-style: oblique;
+    color: #5c96cc;
+    display: flex;
+    flex-direction: column;
 }
 
+#portafolio h1::after{
+    content: '📂';
+    color:  #5c96cc;
+    text-shadow: 1px 1px 5px #5c96cc;
+    font-style: normal;
+}
 /* Contenedor de proyectos */
 .container-port {
     display: flex;
@@ -104,6 +114,11 @@
     .container-port {
         gap: 10px;
     }
+    .items-port:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 8px 5px rgba(0, 0, 0, 0.2);
+    }
+    
     .project-image img {
         height: 50px;
         width: 50px;
