--- a/estilos/style_header.css
+++ b/estilos/style_header.css
@@ -20,9 +20,10 @@ header a.active {
 .title {
     display: flex;
     font-size: 2rem;
-    color: aliceblue;
+    color: #61aef5;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     transition: color 0.9s ease, text-shadow 0.6s ease, transform 0.3s ease;
+    text-shadow: 2px 4px 5px #5c96cc;
 }
 
 .title:hover {
