--- a/estilos/style_header.css
+++ b/estilos/style_header.css
@@ -148,7 +148,7 @@ header a.active {
 
 @media (min-width: 1441px) {
     .container {
-        justify-content: center;
+        justify-content: space-around;
         height: 10vh;
         padding: 10px;
     }
