--- a/estilos/style_header.css
+++ b/estilos/style_header.css
@@ -15,6 +15,7 @@ header a.active {
     border-bottom: 1px solid rgba(128, 128, 128, 0.205);
     padding: 0 20px;
     flex-wrap: wrap;
+    font-size: 15px;
 }
 
 .title {
@@ -31,139 +32,110 @@ header a.active {
     text-shadow: 2px 2px 10px rgba(151, 50, 32, 0.7);
     transform: scale(1.1);
 }
-
-.items {
+.nav-links{
     display: flex;
-    font-size: 1.6rem;
-    height: 40px;
-    gap: 60px;
+    flex-direction: row;
     align-items: center;
-    justify-content: flex-end;
-    flex-wrap: wrap;
+    list-style: none;
+    gap: 50px;
 }
-
-.items a {
+.nav-links a{
     text-decoration: none;
-    color: aliceblue;
-    border-bottom: 2px solid transparent;
+    color: white;
+    font-family: quicksand;
+    height: 23px;
     transition: color 0.3s ease, transform 0.3s ease, border-color 0.3s ease;
-    font-family: "Quicksand", serif;
+    border-bottom: 2px solid transparent;
+    padding: 5px;
 }
-
-.items a:hover {
+.nav-links a:hover{
+    position: relative;
+    border-bottom: 2px solid #E56A48;
     border-color: white;
 }
-@media (max-width: 480px) {
-    .container {
+.hamburguer{
+    display:none;
+    flex-direction: column;
+    cursor: pointer;
+}
+.bar{
+    width: 25px;
+    height: 3px;
+    background-color: whitesmoke;
+    margin: 4px 0;
+    transition: 0.4s;
+}
+
+/*con el ancho maximo de 768px se ocultan los links y se muestra el menu amburguesa*/
+@media (max-width: 768px){
+    header a.active {
+        border-bottom: transparent;
+      }
+    .container{
+        display: flex;
+        justify-content:space-between;
+        padding: 0 20px;
+    }
+    .logo img {
+        height: 85px;
+    }
+    .nav-links {
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transition: max-height 0.4s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 100%;
         flex-direction: column;
-        height: auto;
-        padding: 5px;
+        text-align: center;
+        border-radius: 0 0 10px 10px;
+        background-color:#1e2b30;
+        gap: 1px;
+    }
+
+    .nav-links li {
+        margin: 10px 0;
+        display: flex;
+        width: 100%;
+    }
+    
+    .nav-links li a {
+        width: 100%;
+        position: relative;
+        /* bottom: 2px; */
+        height: 40px; 
+        display: flex;
         align-items: center;
-    }
-
-    .title {
-        font-size: 1.7rem;
-        margin-bottom: 10px;
-    }
-
-    .items {
         justify-content: center;
+    }
+    
+    .hamburguer{
+        display: flex;
+    }
+  
+  .nav-links.show {
+    max-height: 300px; /* Ajusta según el contenido */
+    opacity: 1;
+}
+.nav-links a:hover{
+    border-bottom: transparent;
+}
+   /* .nav-links{
+        display: none;
+        position: absolute;
+        top: 100%;
+        right: 0%;
+        width: 40%;
+        flex-direction: column;
+        text-align: center;;
+        border-radius: 0 0 10px 10px;
         gap: 10px;
-    }
+    } 
+        .nav-links.show{
+        display: flex;
+        background-color: #6e534b;
+  } */
 
-    .items a {
-        font-size: 1rem;
-        padding: 10px 8px;
-    }
-}
-
-@media (min-width: 481px) and (max-width: 768px) {
-    .container {
-        flex-direction: column;
-        height: auto;
-        padding: 13px;
-        align-items: center;
-    }
-
-    .title {
-        font-size: 1.9rem;
-        margin-bottom: 15px;
-    }
-
-    .items {
-        justify-content: center;
-        gap: 15px;
-    }
-
-    .items a {
-        font-size: 1.2rem;
-        padding: 6px 12px;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-    .container {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 20px;
-        height: auto;
-    }
-
-    .title {
-        font-size: 2rem;
-    }
-
-    .items {
-        justify-content: space-around;
-        gap: 30px;
-    }
-
-    .items a {
-        font-size: 1.3rem;
-        padding: 8px 15px;
-    }
-}
-
-@media (min-width: 1025px) and (max-width: 1440px) {
-    .container {
-        justify-content: space-around;
-        height: 10vh;
-        padding: 10px;
-    }
-
-    .title {
-        font-size: 2.2rem;
-    }
-
-    .items {
-        justify-content: space-around;
-        gap: 40px;
-    }
-
-    .items a {
-        font-size: 1.6rem;
-        padding: 5px 20px;
-    }
-}
-
-@media (min-width: 1441px) {
-    .container {
-        justify-content: space-around;
-        height: 10vh;
-        padding: 10px;
-    }
-
-    .title {
-        font-size: 2.5rem;
-    }
-
-    .items {
-        justify-content: center;
-        gap: 50px;
-    }
-
-    .items a {
-        font-size: 1.8rem;
-        padding: 7px 25px;
-    }
 }
